@@ -1,16 +1,18 @@
-# $NetBSD: Makefile,v 1.1 2018/12/21 12:08:04 wen Exp $
+# $NetBSD: Makefile,v 1.2 2019/07/31 15:58:35 brook Exp $
 
-CATEGORIES=	geography
+CATEGORIES=	geography R
 
 MAINTAINER=	wen@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/maptools/
-COMMENT=	Tools for reading and handling spatial objects
-LICENSE=	gnu-gpl-v2
+COMMENT=	Tools for handling spatial objects
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	maptools
-R_PKGVER=	0.9-4
+R_PKGVER=	0.9-5
 
 DEPENDS+=	R-sp>=1.0.11:../../math/R-sp
+
+USE_LANGUAGES=	c
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
