@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.1 2018/12/21 12:08:04 wen Exp $
+$NetBSD: distinfo,v 1.2 2019/07/31 15:58:35 brook Exp $
 
-SHA1 (R/maptools_0.9-4.tar.gz) = 6bb7c13fd0c7439d9d98a63eb9e9b7b9add8e369
-RMD160 (R/maptools_0.9-4.tar.gz) = 3b33205fed947ed764ec0a00f2300b5ea80cbce0
-SHA512 (R/maptools_0.9-4.tar.gz) = 871ad174e4ac68a273615ae167916f2cc45f3ce903174596b3a70037819c107d3bb7c2f2f39292c4caaff477b5a5e8fe93607c1fbc1400f58278a28896c70d31
-Size (R/maptools_0.9-4.tar.gz) = 1580721 bytes
+SHA1 (R/maptools_0.9-5.tar.gz) = a578fa81beb39cdc43bbdb72e8342a18d163b863
+RMD160 (R/maptools_0.9-5.tar.gz) = af6019f8f3e3ddab0ba08b48324eb5d1418eea73
+SHA512 (R/maptools_0.9-5.tar.gz) = a541f229e749ce0011d0e873bfe4f75205928dc8cbe7e52c8a05ed4cf5afe531e5c500d59523cea76ae0c0382d3e2b140a19932ca9092d5c92e03fc0a10e333f
+Size (R/maptools_0.9-5.tar.gz) = 1581592 bytes
